configsync-src/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns
  labels: 
    istio.io/rev: asm-1104-6
